--- a/test.ipynb
+++ b/test.ipynb
@@ -50,29 +50,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
-       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
-       "│ 862a1018fffffff │ 1.6588950276243093 │\n",
-       "│ 862a1088fffffff │  9.787446808510639 │\n",
-       "│ 862a10667ffffff │ 0.6512962962962964 │\n",
-       "│ 862a10707ffffff │ 1.4344105263157896 │\n",
-       "│ 862a1071fffffff │  6.421379129522809 │\n",
-       "│ 862a1000fffffff │ 1.2942699115044247 │\n",
-       "│ 862a15667ffffff │ 3.6666666666666665 │\n",
-       "│ 862a10187ffffff │  4.194242424242424 │\n",
+       "│ 862a100d7ffffff │  0.604239909636192 │\n",
+       "│ 862a10727ffffff │ 0.6621288459090504 │\n",
+       "│ 862a1008fffffff │ 0.5471456491468885 │\n",
+       "│ 86754e64fffffff │ 0.6730361779149294 │\n",
+       "│ 862a100e7ffffff │ 1.9770422191887693 │\n",
+       "│ 862a10387ffffff │ 1.5341203703703703 │\n",
+       "│ 862b1b2b7ffffff │                2.0 │\n",
+       "│ 862a10c5fffffff │  6.260140845070423 │\n",
+       "│ 862a30297ffffff │ 1.5257142857142856 │\n",
+       "│ 862a15007ffffff │ 0.6904761904761905 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862a1515fffffff │               3.56 │\n",
-       "│ 862b8a727ffffff │                1.0 │\n",
-       "│ 862b8b387ffffff │               9.95 │\n",
-       "│ 862aa314fffffff │                1.7 │\n",
-       "│ 862a1385fffffff │                2.0 │\n",
-       "│ 862a1546fffffff │                1.0 │\n",
-       "│ 862b8a6e7ffffff │                1.0 │\n",
-       "│ 862a16717ffffff │                1.0 │\n",
-       "│ 862a118c7ffffff │                2.0 │\n",
-       "│ 862a148e7ffffff │                1.5 │\n",
+       "│ 862a13067ffffff │               15.0 │\n",
+       "│ 862a10aefffffff │                3.5 │\n",
+       "│ 862aa08c7ffffff │                1.0 │\n",
+       "│ 862aa556fffffff │                1.0 │\n",
+       "│ 862a022b7ffffff │                3.0 │\n",
+       "│ 862aac60fffffff │                2.0 │\n",
+       "│ 8604602f7ffffff │ 0.6666666666666666 │\n",
+       "│ 862a12137ffffff │                1.0 │\n",
+       "│ 862aac6cfffffff │                3.0 │\n",
+       "│ 862a1592fffffff │                1.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "Databoose:\n",
+       "Database:\n",
        "    bam: 371 x ['hexid', 'tip1', 'tip2', 'diff']"
       ]
      },
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "out = dw.Databoose(\n",
+    "out = dw.Database(\n",
     "    rel1 = rel1 >> foo,\n",
     "    rel2 = rel2 >> foo,\n",
     ") | \"\"\"\n",
@@ -126,13 +126,6 @@
     "| 'as bam'\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
