--- a/test.ipynb
+++ b/test.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -123,9 +123,15 @@
     "(out\n",
     "| 'where tip1 is not null and tip2 is not null'\n",
     "| 'select *, tip1-tip2 as diff order by diff'\n",
-    "| 'as bam'\n",
-    ")"
+    ") >> 'as bam' # precedence rules!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
