--- a/test.ipynb
+++ b/test.ipynb
@@ -24,13 +24,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# out = dw.query('select * from \"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rel1 = dw.load('data/yellow_tripdata_2010-01.parquet') # lazy load!\n",
     "rel2 = dw.load('data/yellow_tripdata_2010-02.parquet') # lazy load!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -50,29 +59,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a100d7ffffff │  0.604239909636192 │\n",
-       "│ 862a10727ffffff │ 0.6621288459090504 │\n",
-       "│ 862a1008fffffff │ 0.5471456491468885 │\n",
-       "│ 86754e64fffffff │ 0.6730361779149294 │\n",
-       "│ 862a100e7ffffff │ 1.9770422191887693 │\n",
-       "│ 862a10387ffffff │ 1.5341203703703703 │\n",
-       "│ 862b1b2b7ffffff │                2.0 │\n",
-       "│ 862a10c5fffffff │  6.260140845070423 │\n",
-       "│ 862a30297ffffff │ 1.5257142857142856 │\n",
-       "│ 862a15007ffffff │ 0.6904761904761905 │\n",
+       "│ 862a1071fffffff │   6.42137912952281 │\n",
+       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
+       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
+       "│ 862a106c7ffffff │ 0.9598425196850394 │\n",
+       "│ 862a10cc7ffffff │              0.426 │\n",
+       "│ 862a1006fffffff │  3.119622641509434 │\n",
+       "│ 862a10707ffffff │ 1.4344105263157894 │\n",
+       "│ 86754a937ffffff │          0.5765625 │\n",
+       "│ 862b20637ffffff │ 0.1788888888888889 │\n",
+       "│ 862a1050fffffff │  0.527027027027027 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862a13067ffffff │               15.0 │\n",
-       "│ 862a10aefffffff │                3.5 │\n",
-       "│ 862aa08c7ffffff │                1.0 │\n",
-       "│ 862aa556fffffff │                1.0 │\n",
-       "│ 862a022b7ffffff │                3.0 │\n",
-       "│ 862aac60fffffff │                2.0 │\n",
-       "│ 8604602f7ffffff │ 0.6666666666666666 │\n",
-       "│ 862a12137ffffff │                1.0 │\n",
-       "│ 862aac6cfffffff │                3.0 │\n",
-       "│ 862a1592fffffff │                1.0 │\n",
+       "│ 862a137b7ffffff │                1.0 │\n",
+       "│ 860e508a7ffffff │                1.4 │\n",
+       "│ 862af4b77ffffff │                1.0 │\n",
+       "│ 862a12887ffffff │                2.0 │\n",
+       "│ 862aa5167ffffff │                1.0 │\n",
+       "│ 862a11467ffffff │                4.0 │\n",
+       "│ 862a1678fffffff │                2.0 │\n",
+       "│ 862aad147ffffff │                3.0 │\n",
+       "│ 862a11bb7ffffff │                2.1 │\n",
+       "│ 862758907ffffff │                1.5 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +137,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rel1 = dw.load('data/yellow_tripdata_2010-01.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────────┬─────────────────────┬─────────────────────┬───┬────────────┬──────────────┬──────────────┐\n",
+       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ … │ tip_amount │ tolls_amount │ total_amount │\n",
+       "│  varchar  │       varchar       │       varchar       │   │   double   │    double    │    double    │\n",
+       "├───────────┼─────────────────────┼─────────────────────┼───┼────────────┼──────────────┼──────────────┤\n",
+       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │ … │        0.0 │          0.0 │          5.0 │\n",
+       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │ … │        0.0 │          0.0 │         16.3 │\n",
+       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │ … │        0.0 │          0.0 │         12.7 │\n",
+       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │ … │        0.0 │          0.0 │         14.3 │\n",
+       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │ … │       0.87 │          0.0 │         6.67 │\n",
+       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │ … │        1.0 │          0.0 │         12.0 │\n",
+       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │ … │        0.0 │          0.0 │          6.6 │\n",
+       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │ … │        0.0 │          0.0 │          7.4 │\n",
+       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │ … │        0.0 │          0.0 │         12.3 │\n",
+       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │ … │        2.0 │          0.0 │         12.0 │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │ … │       1.32 │          0.0 │         7.92 │\n",
+       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │ … │       4.06 │          0.0 │        24.36 │\n",
+       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │ … │        0.0 │          0.0 │          9.6 │\n",
+       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │ … │        1.5 │          0.0 │         12.6 │\n",
+       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │ … │        3.0 │          0.0 │         21.7 │\n",
+       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │ … │        0.0 │          0.0 │          9.0 │\n",
+       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │ … │        0.0 │          0.0 │          6.6 │\n",
+       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │ … │        2.0 │          0.0 │         21.8 │\n",
+       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │ … │        0.0 │          0.0 │          7.0 │\n",
+       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │ … │        0.0 │          0.0 │         10.7 │\n",
+       "├───────────┴─────────────────────┴─────────────────────┴───┴────────────┴──────────────┴──────────────┤\n",
+       "│ ? rows (>9999 rows, 20 shown)                                                   18 columns (6 shown) │\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel1._rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bah = rel1._rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vendor_id',\n",
+       " 'pickup_datetime',\n",
+       " 'dropoff_datetime',\n",
+       " 'passenger_count',\n",
+       " 'trip_distance',\n",
+       " 'pickup_longitude',\n",
+       " 'pickup_latitude',\n",
+       " 'rate_code',\n",
+       " 'store_and_fwd_flag',\n",
+       " 'dropoff_longitude',\n",
+       " 'dropoff_latitude',\n",
+       " 'payment_type',\n",
+       " 'fare_amount',\n",
+       " 'surcharge',\n",
+       " 'mta_tax',\n",
+       " 'tip_amount',\n",
+       " 'tolls_amount',\n",
+       " 'total_amount']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(dw.query('select column_name from (describe from x)', x=bah).df()['column_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>vendor_id</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pickup_datetime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dropoff_datetime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>passenger_count</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>trip_distance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>pickup_longitude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pickup_latitude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>rate_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>store_and_fwd_flag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>dropoff_longitude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>dropoff_latitude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>payment_type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>fare_amount</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>surcharge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>mta_tax</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>tip_amount</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>tolls_amount</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>total_amount</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           column_name\n",
+       "0            vendor_id\n",
+       "1      pickup_datetime\n",
+       "2     dropoff_datetime\n",
+       "3      passenger_count\n",
+       "4        trip_distance\n",
+       "5     pickup_longitude\n",
+       "6      pickup_latitude\n",
+       "7            rate_code\n",
+       "8   store_and_fwd_flag\n",
+       "9    dropoff_longitude\n",
+       "10    dropoff_latitude\n",
+       "11        payment_type\n",
+       "12         fare_amount\n",
+       "13           surcharge\n",
+       "14             mta_tax\n",
+       "15          tip_amount\n",
+       "16        tolls_amount\n",
+       "17        total_amount"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dw.query('select column_name from (describe from x)', x=rel1._rel).df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = dw.Database(\n",
+    "    rel1 = 'data/yellow_tripdata_2010-01.parquet',\n",
+    "    rel2 = 'data/yellow_tripdata_2010-02.parquet',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
+       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────────┬─────────────────────┬─────────────────────┬───┬────────────┬──────────────┬──────────────┐\n",
+       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ … │ tip_amount │ tolls_amount │ total_amount │\n",
+       "│  varchar  │       varchar       │       varchar       │   │   double   │    double    │    double    │\n",
+       "├───────────┼─────────────────────┼─────────────────────┼───┼────────────┼──────────────┼──────────────┤\n",
+       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │ … │        0.0 │          0.0 │          5.0 │\n",
+       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │ … │        0.0 │          0.0 │         16.3 │\n",
+       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │ … │        0.0 │          0.0 │         12.7 │\n",
+       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │ … │        0.0 │          0.0 │         14.3 │\n",
+       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │ … │       0.87 │          0.0 │         6.67 │\n",
+       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │ … │        1.0 │          0.0 │         12.0 │\n",
+       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │ … │        0.0 │          0.0 │          6.6 │\n",
+       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │ … │        0.0 │          0.0 │          7.4 │\n",
+       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │ … │        0.0 │          0.0 │         12.3 │\n",
+       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │ … │        2.0 │          0.0 │         12.0 │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │ … │       1.32 │          0.0 │         7.92 │\n",
+       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │ … │       4.06 │          0.0 │        24.36 │\n",
+       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │ … │        0.0 │          0.0 │          9.6 │\n",
+       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │ … │        1.5 │          0.0 │         12.6 │\n",
+       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │ … │        3.0 │          0.0 │         21.7 │\n",
+       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │ … │        0.0 │          0.0 │          9.0 │\n",
+       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │ … │        0.0 │          0.0 │          6.6 │\n",
+       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │ … │        2.0 │          0.0 │         21.8 │\n",
+       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │ … │        0.0 │          0.0 │          7.0 │\n",
+       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │ … │        0.0 │          0.0 │         10.7 │\n",
+       "├───────────┴─────────────────────┴─────────────────────┴───┴────────────┴──────────────┴──────────────┤\n",
+       "│ ? rows (>9999 rows, 20 shown)                                                   18 columns (6 shown) │\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out | 'from rel1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": []
