--- a/test.ipynb
+++ b/test.ipynb
@@ -39,12 +39,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'vendor_id': 'DDS',\n",
+       " 'pickup_datetime': '2010-01-08 19:41:21',\n",
+       " 'dropoff_datetime': '2010-01-08 19:46:21',\n",
+       " 'passenger_count': np.int64(1),\n",
+       " 'trip_distance': np.float64(1.4),\n",
+       " 'pickup_longitude': np.float64(-73.98054999999998),\n",
+       " 'pickup_latitude': np.float64(40.748133),\n",
+       " 'rate_code': '1',\n",
+       " 'store_and_fwd_flag': None,\n",
+       " 'dropoff_longitude': np.float64(-73.992458),\n",
+       " 'dropoff_latitude': np.float64(40.737885),\n",
+       " 'payment_type': 'CAS',\n",
+       " 'fare_amount': np.float64(5.7),\n",
+       " 'surcharge': np.float64(1.5),\n",
+       " 'mta_tax': np.float64(-1.0),\n",
+       " 'tip_amount': np.float64(0.0),\n",
+       " 'tolls_amount': np.float64(0.0),\n",
+       " 'total_amount': np.float64(7.2)}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: why isn't this lazy?\n",
-    "# rel3 = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet' >> dw.load"
+    "rel1 | 'select arbitrary(columns(*))' | dict"
    ]
   },
   {
@@ -55,32 +82,71 @@
     {
      "data": {
       "text/plain": [
+       "14863778"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel1 >> 'select count()' >> int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: why isn't this lazy?\n",
+    "# rel3 = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet' >> dw.load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rel4 = 'data/yellow_tripdata_2010-01.parquet' >> dw.load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "┌─────────────────┬────────────────────┐\n",
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a1071fffffff │   6.42137912952281 │\n",
-       "│ 862a1001fffffff │ 0.7062534435261708 │\n",
-       "│ 862a106d7ffffff │ 0.6087299035369775 │\n",
-       "│ 862a106c7ffffff │ 0.9598425196850394 │\n",
-       "│ 862a10cc7ffffff │              0.426 │\n",
-       "│ 862a1006fffffff │  3.119622641509434 │\n",
-       "│ 862a10707ffffff │ 1.4344105263157894 │\n",
-       "│ 86754a937ffffff │          0.5765625 │\n",
-       "│ 862b20637ffffff │ 0.1788888888888889 │\n",
-       "│ 862a1050fffffff │  0.527027027027027 │\n",
+       "│ 862a10747ffffff │  0.675799283154122 │\n",
+       "│ 862a1005fffffff │ 1.1295640074211504 │\n",
+       "│ 862a1009fffffff │  1.140124796527401 │\n",
+       "│ 862a10037ffffff │  3.091877394636015 │\n",
+       "│ 862a10757ffffff │ 0.7489915492957747 │\n",
+       "│ 86754a917ffffff │ 0.6184337349397591 │\n",
+       "│ 862a10197ffffff │ 1.6855555555555557 │\n",
+       "│ 862a1045fffffff │ 1.4863380281690142 │\n",
+       "│ 862a104dfffffff │              3.176 │\n",
+       "│ 862a10447ffffff │  2.945642458100559 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862a137b7ffffff │                1.0 │\n",
-       "│ 860e508a7ffffff │                1.4 │\n",
-       "│ 862af4b77ffffff │                1.0 │\n",
-       "│ 862a12887ffffff │                2.0 │\n",
        "│ 862aa5167ffffff │                1.0 │\n",
        "│ 862a11467ffffff │                4.0 │\n",
-       "│ 862a1678fffffff │                2.0 │\n",
-       "│ 862aad147ffffff │                3.0 │\n",
-       "│ 862a11bb7ffffff │                2.1 │\n",
+       "│ 862a11ba7ffffff │               0.75 │\n",
+       "│ 862a06047ffffff │                2.0 │\n",
+       "│ 862a1285fffffff │              1.875 │\n",
+       "│ 862a1151fffffff │                1.0 │\n",
+       "│ 862af1807ffffff │                1.0 │\n",
+       "│ 862a14707ffffff │                1.0 │\n",
+       "│ 862a16a47ffffff │                1.5 │\n",
        "│ 862758907ffffff │                1.5 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
@@ -98,7 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = dw.Database(\n",
+    "    rel1 = rel1 >> foo,\n",
+    "    rel2 = rel2 >> foo,\n",
+    ")\n",
+    "# out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,6 +463,7 @@
    "source": [
     "out = dw.Database(\n",
     "    rel1 = 'data/yellow_tripdata_2010-01.parquet',\n",
+    "    # rel1 = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet',\n",
     "    rel2 = 'data/yellow_tripdata_2010-02.parquet',\n",
     ")"
    ]
@@ -391,28 +471,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Database:\n",
-       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
-       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,13 +516,6 @@
    "source": [
     "out | 'from rel1'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
