--- a/test.ipynb
+++ b/test.ipynb
@@ -39,30 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'vendor_id': 'DDS',\n",
-       " 'pickup_datetime': '2010-01-08 19:41:21',\n",
-       " 'dropoff_datetime': '2010-01-08 19:46:21',\n",
+       "{'vendor_id': 'VTS',\n",
+       " 'pickup_datetime': '2010-01-26 07:41:00',\n",
+       " 'dropoff_datetime': '2010-01-26 07:45:00',\n",
        " 'passenger_count': np.int64(1),\n",
-       " 'trip_distance': np.float64(1.4),\n",
-       " 'pickup_longitude': np.float64(-73.98054999999998),\n",
-       " 'pickup_latitude': np.float64(40.748133),\n",
+       " 'trip_distance': np.float64(0.75),\n",
+       " 'pickup_longitude': np.float64(-73.956778),\n",
+       " 'pickup_latitude': np.float64(40.76775),\n",
        " 'rate_code': '1',\n",
        " 'store_and_fwd_flag': None,\n",
-       " 'dropoff_longitude': np.float64(-73.992458),\n",
-       " 'dropoff_latitude': np.float64(40.737885),\n",
+       " 'dropoff_longitude': np.float64(-73.965957),\n",
+       " 'dropoff_latitude': np.float64(40.765232),\n",
        " 'payment_type': 'CAS',\n",
-       " 'fare_amount': np.float64(5.7),\n",
-       " 'surcharge': np.float64(1.5),\n",
-       " 'mta_tax': np.float64(-1.0),\n",
+       " 'fare_amount': np.float64(4.5),\n",
+       " 'surcharge': np.float64(0.0),\n",
+       " 'mta_tax': np.float64(0.5),\n",
        " 'tip_amount': np.float64(0.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(7.2)}"
+       " 'total_amount': np.float64(5.0)}"
       ]
      },
      "execution_count": null,
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -125,29 +125,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a10747ffffff │  0.675799283154122 │\n",
-       "│ 862a1005fffffff │ 1.1295640074211504 │\n",
-       "│ 862a1009fffffff │  1.140124796527401 │\n",
-       "│ 862a10037ffffff │  3.091877394636015 │\n",
-       "│ 862a10757ffffff │ 0.7489915492957747 │\n",
-       "│ 86754a917ffffff │ 0.6184337349397591 │\n",
-       "│ 862a10197ffffff │ 1.6855555555555557 │\n",
-       "│ 862a1045fffffff │ 1.4863380281690142 │\n",
-       "│ 862a104dfffffff │              3.176 │\n",
-       "│ 862a10447ffffff │  2.945642458100559 │\n",
+       "│ 862a100d7ffffff │ 0.6042399096361921 │\n",
+       "│ 862a1008fffffff │ 0.5471456491468882 │\n",
+       "│ 86754e64fffffff │ 0.6730361779149294 │\n",
+       "│ 862a10727ffffff │ 0.6621288459090504 │\n",
+       "│ 862a100e7ffffff │ 1.9770422191887693 │\n",
+       "│ 862a10117ffffff │  6.559024390243902 │\n",
+       "│ 862a10387ffffff │ 1.5341203703703705 │\n",
+       "│ 862a10a97ffffff │  2.658620689655172 │\n",
+       "│ 862a1031fffffff │ 1.2615384615384615 │\n",
+       "│ 862a30297ffffff │ 1.5257142857142856 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862aa5167ffffff │                1.0 │\n",
-       "│ 862a11467ffffff │                4.0 │\n",
-       "│ 862a11ba7ffffff │               0.75 │\n",
-       "│ 862a06047ffffff │                2.0 │\n",
-       "│ 862a1285fffffff │              1.875 │\n",
-       "│ 862a1151fffffff │                1.0 │\n",
-       "│ 862af1807ffffff │                1.0 │\n",
-       "│ 862a14707ffffff │                1.0 │\n",
-       "│ 862a16a47ffffff │                1.5 │\n",
-       "│ 862758907ffffff │                1.5 │\n",
+       "│ 86eac3757ffffff │               4.92 │\n",
+       "│ 862a14977ffffff │                2.0 │\n",
+       "│ 862b89367ffffff │                0.5 │\n",
+       "│ 862b88a1fffffff │                1.5 │\n",
+       "│ 862ba959fffffff │               1.75 │\n",
+       "│ 862a31887ffffff │                1.0 │\n",
+       "│ 862b899b7ffffff │                2.6 │\n",
+       "│ 862aaccdfffffff │                1.7 │\n",
+       "│ 862a13b57ffffff │               4.38 │\n",
+       "│ 862a1152fffffff │                2.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -164,15 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    rel1: 850 x ['hexid', 'tip']\n",
+       "    rel2: 731 x ['hexid', 'tip']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out = dw.Database(\n",
     "    rel1 = rel1 >> foo,\n",
     "    rel2 = rel2 >> foo,\n",
     ")\n",
-    "# out"
+    "out"
    ]
   },
   {
@@ -457,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,42 +483,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "┌───────────┬─────────────────────┬─────────────────────┬───┬────────────┬──────────────┬──────────────┐\n",
-       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ … │ tip_amount │ tolls_amount │ total_amount │\n",
-       "│  varchar  │       varchar       │       varchar       │   │   double   │    double    │    double    │\n",
-       "├───────────┼─────────────────────┼─────────────────────┼───┼────────────┼──────────────┼──────────────┤\n",
-       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │ … │        0.0 │          0.0 │          5.0 │\n",
-       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │ … │        0.0 │          0.0 │         16.3 │\n",
-       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │ … │        0.0 │          0.0 │         12.7 │\n",
-       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │ … │        0.0 │          0.0 │         14.3 │\n",
-       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │ … │       0.87 │          0.0 │         6.67 │\n",
-       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │ … │        1.0 │          0.0 │         12.0 │\n",
-       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │ … │        0.0 │          0.0 │          6.6 │\n",
-       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │ … │        0.0 │          0.0 │          7.4 │\n",
-       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │ … │        0.0 │          0.0 │         12.3 │\n",
-       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │ … │        2.0 │          0.0 │         12.0 │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │ … │       1.32 │          0.0 │         7.92 │\n",
-       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │ … │       4.06 │          0.0 │        24.36 │\n",
-       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │ … │        0.0 │          0.0 │          9.6 │\n",
-       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │ … │        1.5 │          0.0 │         12.6 │\n",
-       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │ … │        3.0 │          0.0 │         21.7 │\n",
-       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │ … │        0.0 │          0.0 │          9.0 │\n",
-       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │ … │        0.0 │          0.0 │          6.6 │\n",
-       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │ … │        2.0 │          0.0 │         21.8 │\n",
-       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │ … │        0.0 │          0.0 │          7.0 │\n",
-       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │ … │        0.0 │          0.0 │         10.7 │\n",
-       "├───────────┴─────────────────────┴─────────────────────┴───┴────────────┴──────────────┴──────────────┤\n",
-       "│ ? rows (>9999 rows, 20 shown)                                                   18 columns (6 shown) │\n",
-       "└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+       "Database:\n",
+       "    rel1: 'data/yellow_tripdata_2010-01.parquet'\n",
+       "    rel2: 'data/yellow_tripdata_2010-02.parquet'"
       ]
      },
      "execution_count": null,
@@ -514,8 +500,59 @@
     }
    ],
    "source": [
-    "out | 'from rel1'"
+    "out"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
+       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.hold()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
+       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out >> 'pandas'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
