--- a/test.ipynb
+++ b/test.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/yellow_tripdata_2010-01.parquet'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['rel1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out2 = out >> 'pandas'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +551,325 @@
     }
    ],
    "source": [
-    "out.hold()"
+    "out2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = out2['rel1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vendor_id</th>\n",
+       "      <th>pickup_datetime</th>\n",
+       "      <th>dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>rate_code</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>surcharge</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>total_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VTS</td>\n",
+       "      <td>2010-01-26 07:41:00</td>\n",
+       "      <td>2010-01-26 07:45:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>-73.956778</td>\n",
+       "      <td>40.767750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-73.965957</td>\n",
+       "      <td>40.765232</td>\n",
+       "      <td>CAS</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DDS</td>\n",
+       "      <td>2010-01-30 23:31:00</td>\n",
+       "      <td>2010-01-30 23:46:12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.90</td>\n",
+       "      <td>-73.996118</td>\n",
+       "      <td>40.763932</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-73.981512</td>\n",
+       "      <td>40.741193</td>\n",
+       "      <td>CAS</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DDS</td>\n",
+       "      <td>2010-01-18 20:22:20</td>\n",
+       "      <td>2010-01-18 20:38:12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>-73.979673</td>\n",
+       "      <td>40.783790</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-73.917852</td>\n",
+       "      <td>40.878560</td>\n",
+       "      <td>CAS</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>VTS</td>\n",
+       "      <td>2010-01-09 01:18:00</td>\n",
+       "      <td>2010-01-09 01:35:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>-73.977922</td>\n",
+       "      <td>40.763997</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-73.923908</td>\n",
+       "      <td>40.759725</td>\n",
+       "      <td>CAS</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CMT</td>\n",
+       "      <td>2010-01-18 19:10:14</td>\n",
+       "      <td>2010-01-18 19:17:07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>-73.990924</td>\n",
+       "      <td>40.734682</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-73.995511</td>\n",
+       "      <td>40.739088</td>\n",
+       "      <td>Cre</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14863773</th>\n",
+       "      <td>CMT</td>\n",
+       "      <td>2010-01-06 14:51:19</td>\n",
+       "      <td>2010-01-06 15:02:59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>-73.970436</td>\n",
+       "      <td>40.757928</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-73.957113</td>\n",
+       "      <td>40.764094</td>\n",
+       "      <td>Cas</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14863774</th>\n",
+       "      <td>VTS</td>\n",
+       "      <td>2010-01-09 12:52:00</td>\n",
+       "      <td>2010-01-09 13:15:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.77</td>\n",
+       "      <td>-73.784115</td>\n",
+       "      <td>40.648632</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-73.974673</td>\n",
+       "      <td>40.750805</td>\n",
+       "      <td>CAS</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14863775</th>\n",
+       "      <td>CMT</td>\n",
+       "      <td>2010-01-09 14:00:44</td>\n",
+       "      <td>2010-01-09 14:14:33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>-74.002170</td>\n",
+       "      <td>40.721619</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-73.988528</td>\n",
+       "      <td>40.721484</td>\n",
+       "      <td>Cas</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14863776</th>\n",
+       "      <td>CMT</td>\n",
+       "      <td>2010-01-09 09:52:23</td>\n",
+       "      <td>2010-01-09 09:59:41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>-73.980066</td>\n",
+       "      <td>40.770469</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-73.958075</td>\n",
+       "      <td>40.783242</td>\n",
+       "      <td>Cas</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14863777</th>\n",
+       "      <td>CMT</td>\n",
+       "      <td>2010-01-05 15:25:59</td>\n",
+       "      <td>2010-01-05 15:33:54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>-73.979463</td>\n",
+       "      <td>40.739982</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-73.994477</td>\n",
+       "      <td>40.739006</td>\n",
+       "      <td>Cas</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14863778 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         vendor_id      pickup_datetime  ... tolls_amount  total_amount\n",
+       "0              VTS  2010-01-26 07:41:00  ...          0.0          5.00\n",
+       "1              DDS  2010-01-30 23:31:00  ...          0.0         16.30\n",
+       "2              DDS  2010-01-18 20:22:20  ...          0.0         12.70\n",
+       "3              VTS  2010-01-09 01:18:00  ...          0.0         14.30\n",
+       "4              CMT  2010-01-18 19:10:14  ...          0.0          6.67\n",
+       "...            ...                  ...  ...          ...           ...\n",
+       "14863773       CMT  2010-01-06 14:51:19  ...          0.0          8.20\n",
+       "14863774       VTS  2010-01-09 12:52:00  ...          0.0         45.50\n",
+       "14863775       CMT  2010-01-09 14:00:44  ...          0.0          8.60\n",
+       "14863776       CMT  2010-01-09 09:52:23  ...          0.0          7.80\n",
+       "14863777       CMT  2010-01-05 15:25:59  ...          0.0          6.60\n",
+       "\n",
+       "[14863778 rows x 18 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
