--- a/test.ipynb
+++ b/test.ipynb
@@ -104,24 +104,24 @@
     {
      "data": {
       "text/plain": [
-       "{'vendor_id': 'VTS',\n",
-       " 'pickup_datetime': '2010-01-07 16:04:00',\n",
-       " 'dropoff_datetime': '2010-01-07 16:13:00',\n",
-       " 'passenger_count': np.int64(1),\n",
-       " 'trip_distance': np.float64(1.95),\n",
-       " 'pickup_longitude': np.float64(-73.988265),\n",
-       " 'pickup_latitude': np.float64(40.75385),\n",
+       "{'vendor_id': 'CMT',\n",
+       " 'pickup_datetime': '2010-01-02 13:28:13',\n",
+       " 'dropoff_datetime': '2010-01-02 13:33:57',\n",
+       " 'passenger_count': np.int64(3),\n",
+       " 'trip_distance': np.float64(1.2),\n",
+       " 'pickup_longitude': np.float64(-73.988027),\n",
+       " 'pickup_latitude': np.float64(40.779303),\n",
        " 'rate_code': '1',\n",
-       " 'store_and_fwd_flag': None,\n",
-       " 'dropoff_longitude': np.float64(-73.963482),\n",
-       " 'dropoff_latitude': np.float64(40.75738),\n",
-       " 'payment_type': 'CAS',\n",
-       " 'fare_amount': np.float64(7.7),\n",
-       " 'surcharge': np.float64(1.0),\n",
+       " 'store_and_fwd_flag': '0',\n",
+       " 'dropoff_longitude': np.float64(-73.982404),\n",
+       " 'dropoff_latitude': np.float64(40.767139),\n",
+       " 'payment_type': 'Cre',\n",
+       " 'fare_amount': np.float64(5.7),\n",
+       " 'surcharge': np.float64(0.0),\n",
        " 'mta_tax': np.float64(0.5),\n",
-       " 'tip_amount': np.float64(0.0),\n",
+       " 'tip_amount': np.float64(1.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(9.2)}"
+       " 'total_amount': np.float64(7.2)}"
       ]
      },
      "execution_count": null,
@@ -225,29 +225,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a1072fffffff │  0.757499807122183 │\n",
-       "│ 862a100c7ffffff │ 0.6247265087477886 │\n",
-       "│ 862a10737ffffff │ 1.0371764705882351 │\n",
-       "│ 862a10017ffffff │ 0.8133979641299078 │\n",
-       "│ 862a10087ffffff │ 1.5446507266760428 │\n",
-       "│ 862a1052fffffff │ 4.3549999999999995 │\n",
-       "│ 862a102b7ffffff │ 0.7488484848484849 │\n",
-       "│ 862a102f7ffffff │ 0.6702127659574468 │\n",
-       "│ 862a10627ffffff │ 0.7683108108108109 │\n",
-       "│ 862a1062fffffff │ 1.2124083769633511 │\n",
+       "│ 862a100dfffffff │ 0.7357423387749514 │\n",
+       "│ 862a107a7ffffff │ 1.1270767807585569 │\n",
+       "│ 862a13837ffffff │                1.2 │\n",
+       "│ 862a103a7ffffff │ 1.8788675213675212 │\n",
+       "│ 862a10a37ffffff │ 7.1923076923076925 │\n",
+       "│ 862b8dc77ffffff │                0.9 │\n",
+       "│ 862a1678fffffff │                2.0 │\n",
+       "│ 862a1059fffffff │ 1.0714285714285714 │\n",
+       "│ 862a102a7ffffff │ 0.9058536585365854 │\n",
+       "│ 862a102c7ffffff │ 0.5833333333333334 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862a14477ffffff │                1.0 │\n",
-       "│ 862b8a127ffffff │                4.0 │\n",
-       "│ 862a135a7ffffff │                9.0 │\n",
-       "│ 862a1356fffffff │                1.0 │\n",
-       "│ 862a00327ffffff │                1.0 │\n",
-       "│ 862a13cb7ffffff │                0.5 │\n",
-       "│ 862a46987ffffff │                1.5 │\n",
-       "│ 862a2e08fffffff │                1.4 │\n",
-       "│ 862aaab9fffffff │              10.01 │\n",
-       "│ 862a33c0fffffff │                1.0 │\n",
+       "│ 862a35407ffffff │                1.0 │\n",
+       "│ 862b8c25fffffff │                1.0 │\n",
+       "│ 862a1312fffffff │               2.35 │\n",
+       "│ 862a1438fffffff │               10.0 │\n",
+       "│ 862a1308fffffff │                3.2 │\n",
+       "│ 862a11d8fffffff │                3.0 │\n",
+       "│ 862a11427ffffff │                1.0 │\n",
+       "│ 862aa1d27ffffff │                3.3 │\n",
+       "│ 862aac917ffffff │                1.8 │\n",
+       "│ 862a13027ffffff │                2.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -442,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out2 = out >> 'pandas'"
+    "out2 = out >> 'arrow'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,20 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database:\n",
+       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
+       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out >> 'pandas'"
    ]
